[Done] homePod details section complete

--- a/index.html
+++ b/index.html
@@ -40,6 +40,46 @@
       <p>Available in Midnight and White. $299</p>
     </div>
 
+    <!-- High-fidelity audio section -->
+    <div class="high-fidelity-section">
+      <p>High-fidelity audio</p>
+      <hr />
+      <h2>Amp up everything you hear.</h2>
+      <p>
+        HomePod is a powerhouse of a speaker. Apple‑engineered audio technology
+        and advanced software deliver high‑fidelity sound throughout the room.
+        It intelligently adapts to whatever it’s playing — or wherever it’s
+        playing — and surrounds you in immersive audio that makes everything you
+        listen to sound incredible.
+      </p>
+    </div>
+
+    <!-- homePod details section  -->
+    <div class="homepod-details-container">
+      <div class="homepod-image">
+        <img src="./assets/homepod.png" alt="homePod image" />
+      </div>
+      <div class="homepod-text">
+        <hr />
+        <h3>Room-filling oomph</h3>
+        <p>
+          A high‑excursion woofer packs HomePod with deep, rich bass. Its
+          powerful motor drives the diaphragm a remarkable 20 mm, while its
+          bass‑EQ mic dynamically tunes low frequencies in real time. Superclean
+          bass. Fills the room. Boom.
+        </p>
+        <br />
+        <hr />
+        <h3>Hits the high notes</h3>
+        <p>
+          HomePod has an array of five beam forming tweeters around its base.
+          They optimize high frequencies to produce detailed, articulate audio
+          with stunning clarity. So you can enjoy crystal-clear vocals and all
+          the details of the instruments — just as if you were there in person.
+        </p>
+      </div>
+    </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
