sound all around complete

--- a/index.html
+++ b/index.html
@@ -80,6 +80,43 @@
       </div>
     </div>
 
+    <!-- Sound all around section  -->
+    <img src="./assets/sound.png" alt="sound" class="sound-bg" />
+    <div>
+      <hr class="nav-hr" />
+      <div class="content-container">
+        <h3>Sound all around</h3>
+        <p>
+          Enjoy a whole new level of spaciousness and layering with HomePod. Its
+          beamforming tweeters precisely beam direct sound, like primary vocals,
+          into the middle of the room, and reflect ambient sound, like the
+          backup band, off the walls — for fully immersive listening. And with
+          Spatial Audio tracks, you’ll experience the sense of being surrounded
+          in music like never before.1
+        </p>
+      </div>
+      <hr class="nav-hr" />
+      <div class="content-container">
+        <h3>Optimizes acoustics in real time.</h3>
+        <p>
+          Apple silicon unlocks advanced computational audio innovations in
+          HomePod. Using feedback from the system sensor, it runs complex tuning
+          models in real time to preserve dynamic range and maximize acoustic
+          performance.
+        </p>
+      </div>
+      <hr class="nav-hr" />
+      <div class="content-container">
+        <h3>Tuned to the room.</h3>
+        <p>
+          With room sensing, HomePod automatically understands its location in a
+          room by using its mics to listen for sound reflections. It tunes sound
+          accordingly, so you’ll enjoy the best listening experience possible no
+          matter where it’s placed.
+        </p>
+      </div>
+    </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
