--- a/index.html
+++ b/index.html
@@ -117,6 +117,64 @@
       </div>
     </div>
 
+    <marquee behavior="" direction="">
+      <div class="slider">
+        <div class="flex-container">
+          <img src="./assets/1.jpg" alt="Image 1" />
+          <img src="./assets/2.jpg" alt="Image 2" />
+          <img src="./assets/3.jpg" alt="Image 3" />
+          <img src="./assets/4.jpg" alt="Image 3" />
+          <img src="./assets/5.jpg" alt="Image 3" />
+          <img src="./assets/6.jpg" alt="Image 3" />
+          <img src="./assets/7.jpg" alt="Image 3" />
+          <img src="./assets/8.jpg" alt="Image 3" />
+          <img src="./assets/9.jpg" alt="Image 3" />
+          <img src="./assets/10.jpg" alt="Image 3" />
+        </div>
+      </div>
+    </marquee>
+    <br />
+    <br />
+    <br />
+    <hr class="nav-hr" />
+    <div class="content-container">
+      <h3>100+ million songs? Sounds amazing.</h3>
+      <p>
+        HomePod is built to bring out the best in Apple Music.2 Listen to all of
+        your favorite artists and songs — spanning every imaginable genre — in
+        the highest quality, right in your own home. With effortless access to
+        one of the world’s largest music libraries, the music never really has
+        to stop.
+      </p>
+    </div>
+
+    <!-- dynamic as a duo  -->
+    <div class="apple-background-section apple">
+      <hr class="nav-hr" />
+      <div class="content-container">
+        <h3>Even more dynamic as a duo.</h3>
+        <p>
+          Create a stereo pair to amplify all the music you love.3 Just place
+          two HomePod speakers in the same room, and you’ll be asked if you want
+          to pair them up. Get ready for a wider soundstage and even more
+          enveloping audio than that of traditional stereo speakers.
+        </p>
+      </div>
+    </div>
+
+    <!-- cinematic experience  -->
+    <div>
+      <img src="./assets/shark.jpg" alt="sound" class="shark-bg" />
+      <hr class="shark-hr" />
+      <div class="content-container">
+        <h3>Cinematic experience.</h3>
+        <p>
+          Use HomePod with Apple TV 4K to enjoy Dolby Atmos audio for a complete cinematic home theater experience.1 Mind-blowing visuals. World-class content. Fully immersive sound. And now Enhance Dialogue4 can pull spoken words forward in the center channel. So even whispers are heard more clearly amid the music and background sounds. Your favorite TV shows and movies never looked, or sounded, so vivid.
+        </p>
+      </div>
+    </div>
+    </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
