another section complete

--- a/index.html
+++ b/index.html
@@ -169,10 +169,60 @@
       <div class="content-container">
         <h3>Cinematic experience.</h3>
         <p>
-          Use HomePod with Apple TV 4K to enjoy Dolby Atmos audio for a complete cinematic home theater experience.1 Mind-blowing visuals. World-class content. Fully immersive sound. And now Enhance Dialogue4 can pull spoken words forward in the center channel. So even whispers are heard more clearly amid the music and background sounds. Your favorite TV shows and movies never looked, or sounded, so vivid.
+          Use HomePod with Apple TV 4K to enjoy Dolby Atmos audio for a complete
+          cinematic home theater experience.1 Mind-blowing visuals. World-class
+          content. Fully immersive sound. And now Enhance Dialogue4 can pull
+          spoken words forward in the center channel. So even whispers are heard
+          more clearly amid the music and background sounds. Your favorite TV
+          shows and movies never looked, or sounded, so vivid.
+        </p>
+      </div>
+      <hr class="shark-hr" />
+      <div class="content-container">
+        <h3>Whole house music.</h3>
+        <p>
+          Bring multiple HomePod and HomePod mini speakers under one roof and
+          easily enjoy music throughout your entire home. You can play one song
+          everywhere, or jazz in the kitchen and kids’ music in the little one’s
+          room. With multiroom audio, get ready to rock the whole house.5
         </p>
       </div>
     </div>
+
+    <!-- image template section  -->
+    <div class="container">
+      <img src="./assets/i1.png" alt="Image 1" />
+      <img src="./assets/i2.png" alt="Image 2" />
+      <img src="./assets/i3.png" alt="Image 3" />
+      <img src="./assets/i4.png" alt="Image 3" />
+      <img src="./assets/i5.png" alt="Image 3" />
+      <img src="./assets/i6.png" alt="Image 3" />
+      <img src="./assets/i7.png" alt="Image 3" />
+    </div>
+    <hr class="shark-hr" />
+    <div class="content-container">
+      <h3>Turn up the music, podcasts, and calls.</h3>
+      <p>
+        From amazing tunes on Apple Music and third-party music apps to news,
+        podcasts, and phone calls, HomePod dials up the clarity and fullness of
+        all the listening experiences you love.6 And with AirPlay, you can enjoy
+        even more of your favorite audio on HomePod.5 And now you can ask Siri
+        to play audio from any app on your iPhone.
+      </p>
+    </div>
+
+    <!-- All your devices  -->
+    <div class="device-background-section">
+      <hr class="nav-hr device" />
+      <div class="content-container devices">
+        <h3>All your devices in concert.</h3>
+        <p>
+          HomePod works seamlessly with your Apple devices. Handoff lets you
+          transfer what’s playing on iPhone to HomePod — and the other way
+          around — without skipping a beat.7 And with just your voice, use Siri
+          to easily locate a loved one or your misplaced iPhone with Find My.8
+        </p>
+      </div>
     </div>
 
     <script src="scripts/main.js"></script>
