--- a/index.html
+++ b/index.html
@@ -225,6 +225,156 @@
       </div>
     </div>
 
+    <!-- High IQ  -->
+    <div class="high-iq">
+      <br /><br /><br />
+      <img src="./assets/soundChaka.png" alt="sound" class="high-bg" />
+      <p class="high-iq-p">High IQ</p>
+      <hr class="nav-hr" />
+      <p class="high-text">Built-in intelligence that speaks for itself.</p>
+      <p class="high-text-p2">
+        HomePod comes with Siri built in. So things like setting reminders and
+        sending messages, turning on the lights when you walk through the door,
+        adjusting the temperature, and even DJ-ing your next dinner party — are
+        a “Hey Siri” or now just a simple “Siri” away.9 Manage your day and
+        control your smart home effortlessly with Siri.
+      </p>
+    </div>
+
+    <!-- Siri  -->
+    <div>
+      <div class="siri-container">
+        <img src="./assets/watch.png" alt="" />
+        <h2><span>Siri,</span> set a pizza timer for 12 minutes</h2>
+      </div>
+      <div class="siri-container">
+        <img src="./assets/home.png" alt="" />
+        <h2>
+          <span>Siri,</span> what’s the temperature in here? <sup>10</sup>
+        </h2>
+      </div>
+      <div class="siri-container">
+        <img src="./assets/music.png" alt="" />
+        <h2><span>Siri,</span> play pop hits in the bedroom <sup>6</sup></h2>
+      </div>
+      <div class="siri-container">
+        <img src="./assets/music2.png" alt="" />
+        <h2><span>Hey Siri,</span> find my iPhone</h2>
+      </div>
+      <div class="siri-container">
+        <img src="./assets/person.png" alt="" />
+        <h2><span>Hey Siri,</span> play Hidden Brain</h2>
+      </div>
+      <div class="siri-container">
+        <img src="./assets/home.png" alt="" />
+        <h2><span>Hey Siri,</span> lock the front door <sup>11</sup></h2>
+      </div>
+    </div>
+    <p class="siri-p">
+      When you ask Siri something, your request is associated with a random
+      identifier, not your Apple ID.
+    </p>
+
+    <!-- hey siri section  -->
+    <div class="homepod-details-container">
+      <div class="homepod-image">
+        <img src="./assets/hey-siri.jpg" alt="hey  image" />
+      </div>
+      <div class="homepod-text">
+        <p class="hey-siri">
+          <span>Hey Siri</span>,<br />
+          open the blinds <br />
+          at 7 AM<sup>11</sup>
+        </p>
+      </div>
+    </div>
+    <hr class="nav-hr" />
+    <div class="content-container">
+      <h3>Hands down, the best way to run the house.</h3>
+      <p>
+        As your smart home hub, HomePod lets you control your home without
+        lifting a finger.11 With Siri and smart accessories, things like closing
+        the garage door can get done using just your voice. And with the ability
+        to create automations, tasks like dimming lights at night happen
+        automatically. Along with helpful features like Sound Recognition, which
+        listens for smoke and carbon monoxide alarms. <sup>12</sup>
+      </p>
+    </div>
+
+    <!-- cards  -->
+    <div class="card-container">
+      <div class="card">
+        <img src="./assets/temp.png" alt="" />
+        <h2>Temperature and humidity</h2>
+        <p>
+          With its built-in sensor, HomePod can detect and tell you the
+          temperature and humidity of the room.10 And you can set it in
+          automations so the blinds close if the temperature hits 80 degrees.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./assets/soundCard.png" alt="" />
+        <h2>Sound Recognition</h2>
+        <p>
+          HomePod securely listens for smoke and carbon monoxide alarms.12 If
+          one of these sounds is identified, you’ll get a notification on
+          iPhone, iPad, and Apple Watch.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./assets/auto.png" alt="" />
+        <h2>Automatons</h2>
+        <p>
+          HomePod allows you to control your smart home accessories11
+          automatically by creating automations. Easily set up your lights to
+          turn off every night at 10 p.m. Done.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./assets/remote.png" alt="" />
+        <h2>Remote access</h2>
+        <p>
+          Controlling your smart home while you’re away is simple. Need to
+          unlock the door for a guest? No problem. You can take care of it in
+          the Home app.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./assets/matter.png" alt="" />
+        <h2>Matter compatibility</h2>
+        <p>
+          HomePod works seamlessly with your HomeKit accessories. And as an
+          essential building block for Matter — the smart home connectivity
+          standard — it’s compatible with even more accessories. <sup>13</sup>
+        </p>
+      </div>
+      <div class="card">
+        <img src="./assets/privacy.png" alt="" />
+        <h2>Privacy</h2>
+        <p>
+          Designed to protect your personal information. Privacy at home is more
+          important than ever. That’s why your data is stored in a way that
+          Apple can’t read.
+        </p>
+      </div>
+    </div>
+
+    <div>
+      <br /><br /><br />
+      <img src="./assets/gets.png" alt="sound" class="high-bg" />
+      <hr class="nav-hr" />
+      <div class="content-container">
+        <h3>Everyone gets the message.</h3>
+        <p>
+          With HomePod and HomePod mini speakers in different rooms, easily send
+          an announcement throughout the house — or to a specific room — with
+          Intercom. Just say “Hey Siri, intercom, The game has started,” and the
+          whole house will get the message. It works with iPhone, iPad, AirPods,
+          Apple Watch, and CarPlay, too.
+        </p>
+      </div>
+    </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
