--- a/index.html
+++ b/index.html
@@ -375,6 +375,177 @@
       </div>
     </div>
 
+    <!-- 
+      ------------
+      White Background part
+      ------------
+      -->
+
+    <div class="white-section">
+      <div class="ar">
+        <div>
+          <img src="./assets/circle.png" alt="" class="circle-img" />
+          <p class="ar-title">
+            Use AR to see <br />
+            HomePod.
+          </p>
+          <p class="ar-details">
+            Open this page using Safari on your iPhone or iPad.
+          </p>
+        </div>
+        <div>
+          <img src="./assets/mobile.png" alt="" class="ar-img" />
+        </div>
+      </div>
+
+      <div class="music">
+        <div>
+          <img src="./assets/musica.png" alt="" class="music-img" />
+          <p class="ar-title">
+            Get 6 months <br />
+            of Apple Music <br />
+            free with your <br />
+            HomePod.*
+          </p>
+          <button class="music-details">Learn More ></button>
+        </div>
+        <div>
+          <img src="./assets/g1.jpg" alt="" class="ar-img" />
+          <img src="./assets/g2.jpg" alt="" class="ar-img" />
+          <img src="./assets/g3.jpg" alt="" class="ar-img" />
+        </div>
+      </div>
+
+      <!-- Footer  -->
+      <p class="tv">TV & Home > HomePod (2nd generation)</p>
+      <section class="footer">
+        <div class="footer-row">
+          <div class="footer-col">
+            <h4>Shop and Learn</h4>
+            <ul class="links">
+              <li><a href="#">Store</a></li>
+              <li><a href="#">Mac</a></li>
+              <li><a href="#">iPad</a></li>
+              <li><a href="#">iPhone</a></li>
+              <li><a href="#">Watch</a></li>
+              <li><a href="#">Vision</a></li>
+              <li><a href="#">AirPods</a></li>
+              <li><a href="#">TV & Home</a></li>
+              <li><a href="#">AirTag</a></li>
+              <li><a href="#">Accessories</a></li>
+              <li><a href="#">Gift Cards</a></li>
+            </ul>
+            <h4>Apple Wallet</h4>
+            <ul class="links">
+              <li><a href="#">Wallet</a></li>
+              <li><a href="#">Apple Card</a></li>
+              <li><a href="#">Apple Pay</a></li>
+              <li><a href="#">Apple Cash</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Account</h4>
+            <ul class="links">
+              <li><a href="#">Manage Your Apple ID</a></li>
+              <li><a href="#">Apple Store Account</a></li>
+              <li><a href="#">iCloud.com</a></li>
+            </ul>
+            <h4>Entertainment</h4>
+            <ul class="links">
+              <li><a href="#">Apple One</a></li>
+              <li><a href="#">Apple TV+</a></li>
+              <li><a href="#">Apple Music</a></li>
+              <li><a href="#">Apple Arcade</a></li>
+              <li><a href="#">Apple Fitness+</a></li>
+              <li><a href="#">Apple News+</a></li>
+              <li><a href="#">Apple Podcasts</a></li>
+              <li><a href="#">Apple Books</a></li>
+              <li><a href="#">App Store</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Apple Store</h4>
+            <ul class="links">
+              <li><a href="#">Find a Store</a></li>
+              <li><a href="#">Genius Bar</a></li>
+              <li><a href="#">Today at Apple</a></li>
+              <li><a href="#">Group Reservations</a></li>
+              <li><a href="#">Apple Camp</a></li>
+              <li><a href="#">Apple Store App</a></li>
+              <li><a href="#">Certified Refurbished</a></li>
+              <li><a href="#">Apple Trade In</a></li>
+              <li><a href="#">Financing</a></li>
+              <li><a href="#">Carrier Deals at Apple</a></li>
+              <li><a href="#">Order Status</a></li>
+              <li><a href="#">Shopping Help</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>For Business</h4>
+            <ul class="links">
+              <li><a href="#">Apple and Business</a></li>
+              <li><a href="#">Shop for K-12</a></li>
+            </ul>
+            <h4>For Education</h4>
+            <ul class="links">
+              <li><a href="#">Apple and Education</a></li>
+              <li><a href="#">Shop for Business</a></li>
+              <li><a href="#">Shop for College</a></li>
+            </ul>
+            <h4>For Healthcare</h4>
+            <ul class="links">
+              <li><a href="#">Apple in Healthcare</a></li>
+              <li><a href="#">Health on Apple Watch</a></li>
+              <li><a href="#">Health Records on iPhone</a></li>
+            </ul>
+            <h4>For Government</h4>
+            <ul class="links">
+              <li><a href="#">Shop for Government</a></li>
+              <li><a href="#">Shop for Veterans and Military</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Apple Values</h4>
+            <ul class="links">
+              <li><a href="#">Accessibility</a></li>
+              <li><a href="#">Education</a></li>
+              <li><a href="#">Environment</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Racial Equity and Justice</a></li>
+              <li><a href="#">Supply Chain</a></li>
+            </ul>
+            <h4>About Apple</h4>
+            <ul class="links">
+              <li><a href="#">Newsroom</a></li>
+              <li><a href="#">Apple Leadership</a></li>
+              <li><a href="#">Career Opportunities</a></li>
+              <li><a href="#">Investors</a></li>
+              <li><a href="#">Ethics & Compliance</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Contact Apple</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <div class="footer-text">
+        <p>
+          More ways to shop: <a href="#">Find an Apple</a> Store or
+          <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
+        </p>
+        <hr class="nav-foot" />
+        <div class="last-foot">
+          <div class="p-foot">
+            <p>Copyright © 2024 Apple Inc. All rights reserved.</p>
+            <p>
+              Privacy Policy | Terms of Use | Sales and Refunds | Legal | Site
+              Map
+            </p>
+          </div>
+          <p>United States</p>
+        </div>
+      </div>
+    </div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
