[Done] - which homepod section complete

--- a/index.html
+++ b/index.html
@@ -416,6 +416,82 @@
         </div>
       </div>
 
+      <!-- which homePod  -->
+
+      <div class="homePod">
+        <h4>
+          Which HomePod <br />
+          is right for you?
+        </h4>
+        <div class="homePod-cards">
+          <div class="homePod-card">
+            <img src="./assets/homepodmini.jpg" alt="" class="main-img" />
+            <p class="homePod-title">HomePod mini</p>
+            <p>$99</p>
+            <button class="buy-btn">Buy</button><br />
+
+            <button class="learn">Learn more</button>
+            <hr class="home-hr" />
+
+            <img src="./assets/h1.png" alt="" />
+            <p class="home-title">Surprising sound for its size</p>
+            <p>Full‑range driver</p>
+            <p>Dual force-cancelling passive radiators</p>
+            <p>—</p>
+            <p>—</p>
+            <p>Stereo pair capable <sup>3</sup></p>
+            <p>Multi room audio <sup>5</sup></p>
+
+            <br />
+            <br />
+
+            <img src="./assets/h2.png" alt="" />
+            <p class="home-title">Siri</p>
+            <p>Intelligent assistant</p>
+            <p>Voice recognition</p>
+
+            <img src="./assets/h3.png" alt="" />
+            <p class="home-title">Smart home hub 11</p>
+            <p>Sound Recognition <sup>12</sup></p>
+            <p>Temperature and humidity sensor <sup>10</sup></p>
+            <p>Private and secure</p>
+          </div>
+
+          <!-- 2nd Card HomePod  -->
+
+          <div class="homePod-card">
+            <img src="./assets/homepod_large.jpg" alt="" class="main-img" />
+            <p class="homePod-title">HomePod</p>
+            <p>$299</p>
+            <button class="buy-btn">Buy</button><br /><br />
+
+            <hr class="home-hr" />
+            <img src="./assets/h4.png" alt="" />
+            <p class="home-title">Immersive, high-fidelity audio</p>
+            <p>High-excursion woofer</p>
+            <p>Five beam forming tweeter array</p>
+            <p>Spatial Audio <sup>1</sup></p>
+            <p>Room sensing</p>
+            <p>Stereo pair capable<sup>3</sup></p>
+            <p>Multi room audio <sup>5</sup></p>
+
+            <br />
+            <br />
+
+            <img src="./assets/h2.png" alt="" />
+            <p class="home-title">Siri</p>
+            <p>Intelligent assistant</p>
+            <p>Voice recognition</p>
+
+            <img src="./assets/h3.png" alt="" />
+            <p class="home-title">Smart home hub 11</p>
+            <p>Sound Recognition <sup>12</sup></p>
+            <p>Temperature and humidity sensor <sup>10</sup></p>
+            <p>Private and secure</p>
+          </div>
+        </div>
+      </div>
+
       <!-- Footer  -->
       <p class="tv">TV & Home > HomePod (2nd generation)</p>
       <section class="footer">
